--- a/app.yaml
+++ b/app.yaml
@@ -1,17 +1,12 @@
-runtime: python
+runtime: python37
 env: standard
 entrypoint: gunicorn -b :$PORT app:app
-
-runtime_config:
-  python_version: 3
-
-# This sample incurs costs to run on the App Engine flexible environment.
-# The settings below are to reduce costs during testing and are not appropriate
-# for production use. For more information, see:
-# https://cloud.google.com/appengine/docs/flexible/python/configuring-your-app-with-app-yaml
-manual_scaling:
-  instances: 1
+instance_class: B1
+automatic_scaling:
+  min_num_instances: 0
+  max_num_instances: 1
+  idle_timeout: 1min
 resources:
   cpu: 0.5
-  memory_gb: 0.1
+  memory_gb: 0.5
   disk_size_gb: 10
